fix(components): [radio & checkbox] fix button wrap style (#22073)
* fix(components): [radio] fix el-radio-button css

* fix(components): [radio] fix el-radio-button css

* fix(components): [radio] fix el-radio-button css

fix(components): [radio] fix el-radio-button css

* fix(components): [checkbox] fix checkbox-button border

fix(components): [checkbox] fix checkbox-button border

* fix(components): [radio & checkbox] fix button wrap style

* fix(components): [radio & checkbox] fix button wrap style

Removed unnecessary blank line in radio-button.scss.

--- a/packages/theme-chalk/src/checkbox-button.scss
+++ b/packages/theme-chalk/src/checkbox-button.scss
@@ -24,8 +24,7 @@
       #{getCssVarName('button-bg-color')},
       map.get($button, 'bg-color')
     );
-    border: getCssVar('border');
-    border-left-color: transparent;
+    outline: getCssVar('border');
     color: var(
       #{getCssVarName('button-text-color')},
       map.get($button, 'text-color')
@@ -33,7 +32,6 @@
     -webkit-appearance: none;
     text-align: center;
     box-sizing: border-box;
-    outline: none;
     margin: 0;
     position: relative;
     transition: getCssVar('transition-all');
@@ -104,7 +102,6 @@
 
   &:first-child {
     .#{$namespace}-checkbox-button__inner {
-      border-left: getCssVar('border');
       border-top-left-radius: getCssVar('border-radius-base');
       border-bottom-left-radius: getCssVar('border-radius-base');
       box-shadow: none !important;
